@@ -1,5 +1,8 @@
 Release Note
 
+* 1/13/2015
+  * fixed insertFiles to use master status for status of mutable secondary
+
 * 1/12/2015
   * fixed slow lookup table in insertFiles 
 
